Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -39,8 +39,9 @@
 \textit{Web}: \url{http://vlkale.github.io} \\
 }
 
-\vspace*{0.1in}
-\moveleft.5\sectionwidth\centerline{ U.S. Citizen with Secret Clearance}
+\vspace*{0.2in}
+\moveleft.5\sectionwidth\centerline{
+U.S. Citizen with Secret Clearance}
 
 %TODO: consider adding 'with Q clearance above.
 %\moveleft.5\sectionwidth\centerline{Objective: Position as software engineer specializing in performance engineering.}
@@ -59,9 +60,9 @@
 
 %\quad \quad \textit{GPA}: 3.96/4.00
 
-\section{Honors}
-\vspace*{0.2in}
-\input{listOfAwards}
+%\section{Honors}
+%\vspace*{0.2in}
+%\input{listOfAwards}
 
 \section{Courses Taken}
 \vspace*{0.2in}
