--- a/listEducation.tex
+++ b/listEducation.tex
@@ -1,7 +1,7 @@
-\begin{itemize}[itemsep=-0.1em]
+\begin{itemize}%[itemsep=-0.1em]
+\item Certification, Technical Management Program, 2024, University of California at Los Angeles 
     \item Ph.D (Doctor of Philosophy), Computer Science, 2015, University of Illinois at Urbana-Champaign
-     \item M.S. (Master of Science), Computer Science, 2010, University of Illinois at Urbana-Champaign
-
+ %    \item M.S. (Master of Science), Computer Science, 2010, University of Illinois at Urbana-Champaign
 %    \textbf{Dissertation}: \textit{Low-Overhead Scheduling to Improve Performance of Scientific Applications} 
    \item B.S. (Bachelor of Science), Computer Science, 2007, University of Illinois at Urbana-Champaign
 \end{itemize}
