--- a/listOfExperiences-bySkill.tex
+++ b/listOfExperiences-bySkill.tex
@@ -34,7 +34,7 @@
 }
 
 \noindent
-{Senior Member of Technical Staff} \hfill \textit{August 2022 - June 2024}
+{Senior Member of Technical Staff} \hfill \textit{August 2022 - July 2024}
 %\vspace{-0.02in}
 \begin{itemize}[itemsep=-0.1em]
 \myExpTwo 
@@ -57,18 +57,17 @@
 \end{itemize}
 
 
-\subsection*{HPC Software Development and Peformance Engineering}
+\subsection*{HPC Software Development and Performance Engineering}
 \newcommand{\myExpFour}{
 \item Implemented User-defined Loop Schedules (UDS) for OpenMP and RAJA via a prototype library for LLVM and GCC, leading to a paper at IWOMP 2018 and 3 github PRs merged in Charm++. 
-
-\item Performance analysis and optimization of MPI+CUDA science simulations application on NVIDIA GPUs via CUPTI and auto-tuning, leading to 1.4x speedup of an application for chip design. 
-\item Developed novel and efficient multi-level loop schedulers in Charm++, leading to a 1.2x speedup on the particle-in-cell benchmark PRK code and a Best Poster Candidate at SC18.
+\item Performance analysis and optimization of MPI+CUDA scientific applications on NVIDIA GPUs via CUPTI and auto-tuning, leading to 1.4x speedup of an application for computer chip design.
+\item Developed novel and efficient multi-level loop schedulers in Charm++, leading to a 1.2x speedup on the PRK particle-in-cell benchmark code and a Best Poster Candidate at SC18.
 %\item Added the UDS feature to RAJA and Charm++'s CkLoop, with 1 github PR merged in Charm++.
-}
+} 
 \noindent
 \textbf{USC/ISI + Charmworks, Inc.}\hfill
-{Software Engineer} \hfill \textit{Jan 2016 - May 2019}
-\vspace{-0.1in}
+{Software Engineer} \hfill \textit{Dec 2015 - May 2019}
+\vspace{-0.0in}
 \begin{itemize}[itemsep=-0.1em]
 \myExpFour
 \end{itemize}
@@ -110,29 +109,29 @@
 }
 
 \noindent
-\textbf{LLNL + UIUC}\hfill Researcher \hfill \textit{Jan 2010 – Dec 2015}
-\vspace*{-0.1in}
+\textbf{LLNL + UIUC}\hfill {Researcher} \hfill \textit{Jun 2010 – Dec 2015}
+\vspace*{-0.0in}
 \begin{itemize}[itemsep=-0.1em]
 %\item Measured MPI communication delays for micro-benchmarks codes run on supercomputers and worked to find tools to measure dequeue overheads of OpenMP loop schedulers. 
 %\item Created a software system for automated performance optimization and application programmer usability of low-overhead hybrid scheduling
 %strategies.
-\item Implemented a ROSE-based compiler pass and PMPI-based runtime system for MPI+OpenMP applications to use loop scheduling techniques, leading to a 1.4x speedup on a multi-core cluster. 
-\item Developed prototype for MPIch shared memory extensions, leading a paper with 370+ citations.
-\item Implemented multi-core and GPU performance optimizations for domains of linear algebra, blood flow, fusion, and combustion, leading to 2 papers at IPDPS.
+\item Implemented a ROSE-based compiler pass and PMPI-based runtime system for MPI+OpenMP applications to use loop scheduling techniques, leading to a 1.4x speedup on a multicore cluster. 
+\item Implemented shared memory extensions for MPICH, leading to a paper with 140+ citations.
+\item Implemented multicore and GPU performance optimizations for domains of linear algebra, blood flow, fusion, and combustion, leading to 2 papers at IPDPS.
 
 %\item Assessed further opportunities for performance improvement of low-overhead schedulers, including improvement of spatial locality
 %of low-overhead schedulers. 
 \end{itemize}
 
 
-\subsection*{General Software Engineering}
+\subsection*{General Software Development}
 
 \noindent
-\textbf{Proteus Technologies + Wolfram} \hfill {Software Developer} \hfill \textit{Aug 2007 – Aug 2008}
-\vspace*{-0.1in}
+\textbf{Proteus Technologies + Wolfram} \hfill {Software Developer} \hfill \textit{Aug 2007 – September 2008}
+\vspace*{-0.0in}
 \begin{itemize}[itemsep=-0.1em]
-\item Developed and tested a service-oriented software to monitor health of a large-scale distributed system, leading to an internal white paper and software package. 
-\item Implemented functionality in Mathematica for users to send emails within a kernel, via sendmail and TLS, leading to a software feature in Mathematica.
+\item Developed and tested service-oriented software to monitor the health of a large-scale distributed system for the US government, leading to an internal white paper and software package. 
+\item Implemented functionality in Mathematica for users to send emails from within a Mathematica evaluation kernel, via sendmail and TLS, leading to a new software feature in Mathematica.
 
 %\item Developed company standards for software development through system requirements specifications, Design Documentation.
 %\item Designed and implemented algorithms for power management of clusters, leading to a white paper 
