--- a/resume.tex
+++ b/resume.tex
@@ -28,6 +28,7 @@
 %\setsansfont{Arial}
 %\setmonofont[Color={0019D4}]{Courier New}
 
+
 \newcommand{\myResumeFont}{lmss}
 
 \begin{document} 
@@ -37,7 +38,7 @@
     \Large \textbf{Vivek L. Kale} \\
     \normalsize
 
-   \textbf{Phone:} \href{tel: +01 217-369-7996}{217-369-7996} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{viveklkale@gmail.com} | 
+   \textbf{Phone:} \href{tel: 650-733-9327}{(650) 733-9327} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
       \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
 
 \textbf{Github}: \href{http://github.com/vlkale}{github.com/vlkale} | \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
