--- a/listOfProjects-for1pagerResume.tex
+++ b/listOfProjects-for1pagerResume.tex
@@ -3,8 +3,11 @@
 % \item PLASMA/MAGMA and ParSec: static+dynamic scheduling for CALU
 % \item MPICH: MPIch shared memory extensions and integrated runtime
 %User-defined multi-GPU loop scheduling for clang/LLVM OpenMP. \\ 
-\item \textbf{OpenMP multi-GPU support}: \textit{Repository}: \url{https://github.com/vlkale/taskGPUSched}
+\item \textbf{OpenMP Locality-aware Loop Scheduling}: \url{https://github.com/vlkale/lw-sched}
 %\item \textbf{OpenMP multi-GPU support}: User-defined multi-GPU loop scheduling for clang/LLVM OpenMP https://github.com/vlkale/ParallelProgrammingWithOpenACC/tree/master/Chapter08 
-\item \textbf{Kokkos Tools}: Kokkos Tools and runtime systems for C++.\\ \textit{Repository}: \url{https://github.com/kokkos/kokkos-tools}
-\item \textbf{MPI Slack Predictor}: MPI runtime tool using libunwind to predict slack trace \\ \textit{Repository}: \url{https://github.com/vlkale/slack-trace}
+\item \textbf{Multi-GPU Stencil Benchmark}: 
+\url{https://github.com/vlkale/ParallelProgrammingWithOpenACC}
+%\item \textbf{Kokkos Tools}: \url{https://github.com/kokkos/kokkos-tools}
+% MPI runtime tool using libunwind to predict slack trace \\ 
+\item \textbf{MPI Slack Predictor}: \url{https://github.com/vlkale/slack-trace}
 \end{enumerate}
