adding resume with new first bullet of first experience

--- a/listOfExperiences-bySkill.tex
+++ b/listOfExperiences-bySkill.tex
@@ -1,14 +1,10 @@
-% TODO: put in numbers and impact 
-% TODO: explain role in each 
-% TODO: check for grammare
-% TODO: get checked by recruiters
 
 
 
 
 \newcommand{\myExpOne}{
 %\item Technical lead for HPC Tools and Runtime Systems R\&D for Sandia's Exascale Software.
-\item Pathfinding and software engineering for tools for Kokkos integrated with (1) HPC performance monitoring and feedback via LDMS and (2) PMPI and adaptive runtime systems for MPI.
+\item Software design and engineering for tools for distributed Kokkos, specifically (1) inter-process profiling and adaptivity via PMPI and (2) job-level monitoring and feedback via LDMS.
 %\item Implementing and specifying tooling API features for Kokkos Tools for OpenMP, OpenACC, MPI, and C++ standards.
 \item Developed AI-assisted HPC Tools through LLMs (coderosetta.com) and autotuning (TAU+APEX) for Kokkos applications run on NVIDIA GPUs, resulting in a poster presentation at GTC 2025. 
 \item Research and pathfinding on the use of AI chips, e.g., Cerebras WSE-3, for science simulations. 
