Polish professional summary and contact section: tighten wording, fix hyphenation and links; remove duplicate contact block in 1-pager

--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -1,7 +1,6 @@
-
 \fontfamily{\myResumeFont}\selectfont
 \begin{itemize}[itemsep=-0em]
-    \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models for GPU-based clusters. 
-    \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted HPC tools for profiling and debugging, and research on adaptive load balancing. 
-    \item Effective communicator and collaborator with a strong record of publications and software projects. 
+\item Software engineer and technical leader specializing in GPU-based cluster computing and communication software for high-performance scientific computing and AI infrastructure.
+\item Proven expertise in multi-core and GPU compiler optimization and multi-GPU communication. Demonstrated leadership managing technical teams, driving open-source initiatives, and delivering production-grade parallel programming tools and runtimes.
+\item Strong record of technical management and cross-functional collaboration across production software, multi-million-dollar research initiatives, peer-reviewed publications, and partnerships with hardware vendors and research institutions.
 \end{itemize}
