--- a/resume.tex
+++ b/resume.tex
@@ -38,10 +38,10 @@
     \Large \textbf{Vivek L. Kale} \\
     \normalsize
 
-   \textbf{Phone:} \href{tel: 650-733-9327}{(650) 733-9327} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
-      \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
+    	extbf{Phone:} \href{tel:+16507339327}{(650) 733-9327} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
+        	extbf{LinkedIn}: \href{https://www.linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
 
-\textbf{Github}: \href{http://github.com/vlkale}{github.com/vlkale} | \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
+	extbf{GitHub}: \href{https://github.com/vlkale}{github.com/vlkale} | \textbf{Website}: \href{https://vlkale.github.io}{vlkale.github.io} | \textbf{U.S. citizen with Secret clearance}
 \end{center}
 \noindent\rule{\linewidth}{0.4pt}
 
