Copyedit for typos, capitalization, and consistency across contact info, skills, pubs, and experiences

--- a/contactInfo.tex
+++ b/contactInfo.tex
@@ -1,3 +1,2 @@
-\vspace{-0.4in}\href{mailto: vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | \textbf{US Citizen with Secret Clearance} \\
-\href{http://vlkale.github.io}{http://vlkale.github.io} |
-\href{http://www.linkedin.com/in/vlkale}{http://www.linkedin.com/in/vlkale}
+\vspace{-0.4in}\href{tel:+16507339327}{(650) 733-9327} | \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | \textbf{U.S. citizen with Secret clearance} \\
+\href{https://vlkale.github.io}{vlkale.github.io} | \href{https://www.linkedin.com/in/vlkale}{linkedin.com/in/vlkale} | \href{https://github.com/vlkale}{github.com/vlkale}
