--- a/listOfExperiences-for1pagerResume.tex
+++ b/listOfExperiences-for1pagerResume.tex
@@ -17,7 +17,7 @@
 \vspace*{-0.35in}
 \begin{itemize}
   % \item Contributed to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
-   \item Designed and implemented OpenMP user-defined multiGPU scheduling for LLVM to improve within-node load balancing of AI and scientific applications. 
+  \item Designed and implemented OpenMP user-defined multi-GPU scheduling for LLVM to improve within-node load balancing of AI and scientific applications. 
    \item Developed benchmarks and evaluated OpenMP implementations on Exascale supercomputers.
    \item Represented Brookhaven National Laboratory in the OpenMP Architecture Review Board. 
 \end{itemize}
