--- a/listOfPubs-1pager.tex
+++ b/listOfPubs-1pager.tex
@@ -4,7 +4,7 @@
 %\item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\textit{Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs}}. 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023.
 
 %\item Mathialakan Thavappiragasam, Vivek Kale, Oscar Hernandez and Ada Sedova. \textbf{\textit{Addressing Load Imbalance in Bioinformatics and Biomedical Applications: Efficient Scheduling across Multiple GPUs}} In Proceedings of 12th International Workshop on High Performance Bioinformatics and Biomedicine. December 9, 2021. Houston, Texas, USA. 
-\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara M. Chapman and Oscar Hernandez. \textbf{\textit {Toward Supporting Multi-gpu Targets via Taskloop and User-defined Schedules}}. IWOMP 2020. September 2020. Virtual. 
+\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara M. Chapman and Oscar Hernandez. \textbf{\textit {Toward Supporting Multi-GPU Targets via Taskloop and User-defined Schedules}}. IWOMP 2020. September 2020. Virtual. 
 %\item Amanda Randles, Vivek Kale, Jeff Hammond, William D. Gropp and Efthimios Kaxiras. \textbf{\textit{Performance Analysis of the Lattice Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
