Reorder sections for AI GPU performance focus

--- a/resume.tex
+++ b/resume.tex
@@ -47,22 +47,26 @@
 
 \vspace{-0.1in}
 
+% Reordered for AI GPU Performance Engineer focus
 \section*{\fontfamily{\myResumeFont}\selectfont Professional Summary}
 \input{ProfessionalSummary}
 
+% Spotlight Technical Skills early for GPU/Profiling emphasis
+\section*{\fontfamily{\myResumeFont}\selectfont Technical Skills}
+\input{listOfSkillSetsForResume}
+
+% Bring key GPU kernel experience forward
 \section*{\fontfamily{\myResumeFont}\selectfont Relevant Experience}
 \input{listOfExperiences-bySkill}
 %\input{listofExperiences-resume}
 
-
-\section*{\fontfamily{\myResumeFont}\selectfont Technical Skills}
-\input{listOfSkillSetsForResume}
-\section*{\fontfamily{\myResumeFont}\selectfont Education}
-\input{listEducation-resume1pager}
-
-
+% Projects next to highlight kernel/compilers work
 \section*{\fontfamily{\myResumeFont}\selectfont Open-source Software Projects}
 \input{listOfProjects-for1pagerResume} 
+
+% Education last
+\section*{\fontfamily{\myResumeFont}\selectfont Education}
+\input{listEducation-resume1pager}
 
 
 
