Updates to summary
New summary

--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -1,7 +1,6 @@
-
 \fontfamily{\myResumeFont}\selectfont
 \begin{itemize}[itemsep=-0em]
-    \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models for GPU-based clusters. 
-    \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted HPC tools for profiling and debugging, and research on adaptive load balancing. 
-    \item Effective communicator and collaborator with a strong record of publications and software projects. 
-\end{itemize}
+\item Software engineer and technical leader specializing in performance optimization and reliability of scientific and AI applications deployed on GPU-based clusters.
+\item Proven expertise in developing systems software to optimize CPU and GPU computation and multi-GPU communication in applications; demonstrated leadership in managing technical teams and driving open-source initiatives for delivering production-grade runtimes, tools and compiler support for GPU-based parallel programming.
+\item Strong track record of technical management and cross-functional collaboration for production software, multi-million dollar research initiatives, peer-reviewed publications, and partnerships with hardware vendors and research institutions.
+\end{itemize} 
